--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <!-- A dark Holo shade of red. Equivalent to #ffcc0000 -->
     <color name="holo_red_dark">#ffcc0000</color>
     <!-- A Holo shade of purple. Equivalent to #ffaa66cc -->
-    <color name="holo_purple">#ffaa66cc</color>
+    <color name="holo_purple">#0F90F4</color>
     <!-- A light Holo shade of orange. Equivalent to #ffffbb33. -->
     <color name="holo_orange_light">#ffffbb33</color>
     <!-- A dark Holo shade of orange. Equivalent to ffff8800. -->
@@ -25,4 +25,6 @@
     <color name="holo_blue_bright">#ff00ddff</color>
     <!-- A really bright Holo shade of gray. Equivalent to #33cccccc. -->
     <color name="holo_gray_bright">#33CCCCCC</color>
+
+    <color name="default_color">#2C7E9C</color>
 </resources>
