--- a/app/src/main/res/layout/activity_tabbar.xml
+++ b/app/src/main/res/layout/activity_tabbar.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TabbarActivity">
+    tools:context=".InfoActivity">
     <include
         layout="@layout/layout_header"
         android:layout_width="match_parent"
