--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,10 @@
     <color name="holo_blue_bright">#ff00ddff</color>
     <!-- A really bright Holo shade of gray. Equivalent to #33cccccc. -->
     <color name="holo_gray_bright">#33CCCCCC</color>
+    <!-- res/values/colors.xml -->
+
+    <color name="colorPlaceholderBackground">#CCCCCC</color>
+
 
     <color name="default_color">#2C7E9C</color>
 </resources>
