--- a/app/src/main/res/layout/activity_details_film.xml
+++ b/app/src/main/res/layout/activity_details_film.xml
@@ -1,4 +1,3 @@
-<!-- activity_details_film.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +12,6 @@
         android:text="Titre du film"
         android:layout_below="@id/imageViewFilm"
         android:layout_marginTop="16dp" />
-
 
     <ImageView
         android:id="@+id/imageViewBackArrow"
@@ -45,7 +43,6 @@
         android:layout_marginTop="16dp"
         android:scaleType="centerCrop" />
 
-
     <TextView
         android:id="@+id/durationTextView"
         android:layout_width="wrap_content"
@@ -54,23 +51,38 @@
         android:layout_marginTop="46dp"
         android:text="Durée du film" />
 
-    <TextView
-        android:id="@+id/descriptionTextView"
+    <!-- ScrollView pour la description du film et le bouton -->
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Description du film"
         android:layout_below="@id/durationTextView"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:layout_above="@+id/addToCartButton"
+        android:layout_alignParentBottom="true">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/descriptionTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Description du film"
+                android:layout_marginTop="16dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <Button
         android:id="@+id/addToCartButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/descriptionTextView"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:text="Ajouter au panier" />
-
 
 </RelativeLayout>
