--- a/app/src/main/res/layout/fragment_room_home.xml
+++ b/app/src/main/res/layout/fragment_room_home.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".RoomHomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <org.osmdroid.views.MapView
+        android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Salles" />
+        android:layout_height="match_parent" />
+
 
 </FrameLayout>
