--- a/app/src/main/res/layout/fragment_cart_home.xml
+++ b/app/src/main/res/layout/fragment_cart_home.xml
@@ -1,25 +1,27 @@
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
+
 
     <LinearLayout
+        android:id="@+id/cartLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
 
-        <LinearLayout
-            android:id="@+id/cartLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <!-- Le contenu du panier sera ajouté dynamiquement ici -->
-
-        </LinearLayout>
 
     </LinearLayout>
 
-</ScrollView>
+    <!-- Add the empty cart message TextView -->
+    <TextView
+        android:id="@+id/emptyCartMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Votre panier est vide"
+        android:visibility="gone"
+        android:layout_marginTop="16dp"/>
+
+</LinearLayout>
